Coding of .all-works started

--- a/src/components/about/about.hbs
+++ b/src/components/about/about.hbs
@@ -1,134 +1,157 @@
 <div class="about" id="about">
     <div class="container about__container">
-        <div class="about-work">
+        <div class="about-skills">
             <h2 class="h2 about__title">С чем работаю</h2>
             <div class="h2_subtitle about__description">языки, фреймворки, CMS</div>
-            <ul class="about-work__list">
-                <li class="checkbox about-work__item">
+            <ul class="about-skills__list">
+                <li class="checkbox about-skills__item">
                     <div class="checkbox">
                         <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
                         <label class="checkbox__icon" for="my-checkbox-1"></label>
                         <label class="checkbox__label" for="my-checkbox-1">HTML 5</label>
                     </div>
-                    <div class="about-work__item-rating"></div>
+                    <div class="about-skills__item-rating"></div>
                 </li>
-                <li class="checkbox about-work__item">
+                <li class="checkbox about-skills__item">
                     <div class="checkbox">
-                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
-                        <label class="checkbox__icon" for="my-checkbox-1"></label>
-                        <label class="checkbox__label" for="my-checkbox-1">CSS 3</label>
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-2">
+                        <label class="checkbox__icon" for="my-checkbox-2"></label>
+                        <label class="checkbox__label" for="my-checkbox-2">CSS 3</label>
                     </div>
-                    <div class="about-work__item-rating"></div>
+                    <div class="about-skills__item-rating"></div>
                 </li>
-                <li class="checkbox about-work__item">
+                <li class="checkbox about-skills__item">
                     <div class="checkbox">
-                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
-                        <label class="checkbox__icon" for="my-checkbox-1"></label>
-                        <label class="checkbox__label" for="my-checkbox-1">Javascript</label>
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-3">
+                        <label class="checkbox__icon" for="my-checkbox-3"></label>
+                        <label class="checkbox__label" for="my-checkbox-3">Javascript</label>
                     </div>
-                    <div class="about-work__item-rating"></div>
+                    <div class="about-skills__item-rating"></div>
                 </li>
-                <li class="checkbox about-work__item">
+                <li class="checkbox about-skills__item">
                     <div class="checkbox">
-                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
-                        <label class="checkbox__icon" for="my-checkbox-1"></label>
-                        <label class="checkbox__label" for="my-checkbox-1">jQuery</label>
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-4">
+                        <label class="checkbox__icon" for="my-checkbox-4"></label>
+                        <label class="checkbox__label" for="my-checkbox-4">jQuery</label>
                     </div>
-                    <div class="about-work__item-rating"></div>
+                    <div class="about-skills__item-rating"></div>
                 </li>
-                <li class="checkbox about-work__item">
+                <li class="checkbox about-skills__item">
                     <div class="checkbox">
-                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
-                        <label class="checkbox__icon" for="my-checkbox-1"></label>
-                        <label class="checkbox__label" for="my-checkbox-1">AJAX</label>
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-5">
+                        <label class="checkbox__icon" for="my-checkbox-5"></label>
+                        <label class="checkbox__label" for="my-checkbox-5">AJAX</label>
                     </div>
-                    <div class="about-work__item-rating"></div>
+                    <div class="about-skills__item-rating"></div>
                 </li>
-                <li class="checkbox about-work__item">
+                <li class="checkbox about-skills__item">
                     <div class="checkbox">
-                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
-                        <label class="checkbox__icon" for="my-checkbox-1"></label>
-                        <label class="checkbox__label" for="my-checkbox-1">PHP</label>
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-6">
+                        <label class="checkbox__icon" for="my-checkbox-6"></label>
+                        <label class="checkbox__label" for="my-checkbox-6">PHP</label>
                     </div>
-                    <div class="about-work__item-rating"></div>
+                    <div class="about-skills__item-rating"></div>
                 </li>
-                <li class="checkbox about-work__item">
+                <li class="checkbox about-skills__item">
                     <div class="checkbox">
-                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
-                        <label class="checkbox__icon" for="my-checkbox-1"></label>
-                        <label class="checkbox__label" for="my-checkbox-1">SQL</label>
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-7">
+                        <label class="checkbox__icon" for="my-checkbox-7"></label>
+                        <label class="checkbox__label" for="my-checkbox-7">SQL</label>
                     </div>
-                    <div class="about-work__item-rating"></div>
+                    <div class="about-skills__item-rating"></div>
                 </li>
-                <li class="checkbox about-work__item">
+                <li class="checkbox about-skills__item">
                     <div class="checkbox">
-                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
-                        <label class="checkbox__icon" for="my-checkbox-1"></label>
-                        <label class="checkbox__label" for="my-checkbox-1">NET</label>
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-8">
+                        <label class="checkbox__icon" for="my-checkbox-8"></label>
+                        <label class="checkbox__label" for="my-checkbox-8">NET</label>
                     </div>
-                    <div class="about-work__item-rating"></div>
+                    <div class="about-skills__item-rating"></div>
                 </li>
-                <li class="checkbox about-work__item">
+                <li class="checkbox about-skills__item">
                     <div class="checkbox">
-                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
-                        <label class="checkbox__icon" for="my-checkbox-1"></label>
-                        <label class="checkbox__label" for="my-checkbox-1">RUBY</label>
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-9">
+                        <label class="checkbox__icon" for="my-checkbox-9"></label>
+                        <label class="checkbox__label" for="my-checkbox-9">RUBY</label>
                     </div>
-                    <div class="about-work__item-rating"></div>
+                    <div class="about-skills__item-rating"></div>
                 </li>
-                <li class="checkbox about-work__item">
+                <li class="checkbox about-skills__item">
                     <div class="checkbox">
-                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
-                        <label class="checkbox__icon" for="my-checkbox-1"></label>
-                        <label class="checkbox__label" for="my-checkbox-1">CMS Wordpress</label>
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-10">
+                        <label class="checkbox__icon" for="my-checkbox-10"></label>
+                        <label class="checkbox__label" for="my-checkbox-10">CMS Wordpress</label>
                     </div>
-                    <div class="about-work__item-rating"></div>
+                    <div class="about-skills__item-rating"></div>
                 </li>
-                <li class="checkbox about-work__item">
+                <li class="checkbox about-skills__item">
                     <div class="checkbox">
-                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
-                        <label class="checkbox__icon" for="my-checkbox-1"></label>
-                        <label class="checkbox__label" for="my-checkbox-1">CMS Joomla</label>
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-11">
+                        <label class="checkbox__icon" for="my-checkbox-11"></label>
+                        <label class="checkbox__label" for="my-checkbox-11">CMS Joomla</label>
                     </div>
-                    <div class="about-work__item-rating"></div>
+                    <div class="about-skills__item-rating"></div>
                 </li>
-                <li class="checkbox about-work__item">
+                <li class="checkbox about-skills__item">
                     <div class="checkbox">
-                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
-                        <label class="checkbox__icon" for="my-checkbox-1"></label>
-                        <label class="checkbox__label" for="my-checkbox-1">CMS Opencart</label>
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-12">
+                        <label class="checkbox__icon" for="my-checkbox-12"></label>
+                        <label class="checkbox__label" for="my-checkbox-12">CMS Opencart</label>
                     </div>
-                    <div class="about-work__item-rating"></div>
+                    <div class="about-skills__item-rating"></div>
                 </li>
-                <li class="checkbox about-work__item">
+                <li class="checkbox about-skills__item">
                     <div class="checkbox">
-                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
-                        <label class="checkbox__icon" for="my-checkbox-1"></label>
-                        <label class="checkbox__label" for="my-checkbox-1">CMS Simpla</label>
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-13">
+                        <label class="checkbox__icon" for="my-checkbox-13"></label>
+                        <label class="checkbox__label" for="my-checkbox-13">CMS Simpla</label>
                     </div>
-                    <div class="about-work__item-rating"></div>
+                    <div class="about-skills__item-rating"></div>
                 </li>
-                <li class="checkbox about-work__item">
+                <li class="checkbox about-skills__item">
                     <div class="checkbox">
-                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
-                        <label class="checkbox__icon" for="my-checkbox-1"></label>
-                        <label class="checkbox__label" for="my-checkbox-1">Android</label>
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-14">
+                        <label class="checkbox__icon" for="my-checkbox-14"></label>
+                        <label class="checkbox__label" for="my-checkbox-14">Android</label>
                     </div>
-                    <div class="about-work__item-rating"></div>
+                    <div class="about-skills__item-rating"></div>
                 </li>
-                <li class="checkbox about-work__item">
+                <li class="checkbox about-skills__item">
                     <div class="checkbox">
-                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
-                        <label class="checkbox__icon" for="my-checkbox-1"></label>
-                        <label class="checkbox__label" for="my-checkbox-1">IOS</label>
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-15">
+                        <label class="checkbox__icon" for="my-checkbox-15"></label>
+                        <label class="checkbox__label" for="my-checkbox-15">IOS</label>
                     </div>
-                    <div class="about-work__item-rating"></div>
+                    <div class="about-skills__item-rating"></div>
                 </li>
             </ul>
         </div>
-        <div class="about-me">
+        <div class="about-works">
             <h2 class="h2 about__title">Мой опыт</h2>
             <div class="h2_subtitle about__description">3 предыдущие места работы</div>
+            <ul class="about-works__list">
+                <li class="about-works__item">
+                    <div class="about-works__item-label">Должность: </div><div class="about-works__item-value">например веб-разработчик</div>
+                </li>
+                <li class="about-works__item">
+                    <div class="about-works__item-label">Компания: </div><div class="about-works__item-value">например UniConsulting</div>
+                </li>
+                <li class="about-works__item">
+                    <div class="about-works__item-label">Срока работы: </div><div class="about-works__item-value">например 3 года</div>
+                </li>
+                <li class="about-works__item">
+                    <div class="about-works__item-label">Задачи: </div>
+                    <ul class="about-works-item-list">
+                        <li class="about-works-item-list__item">например вёрстка адаптивного сайта на Wordpress</li>
+                        <li class="about-works-item-list__item">например програмирование форм</li>
+                    </ul>
+                </li>
+                <!--<li class="about-works__item about-works__item_button">-->
+                <!--</li>-->
+            </ul>
+            <a href="#last-work" class="button about-works__button">
+                <span class="about-works__button-title">это моё всё...</span>
+            </a>
         </div>
     </div>
 </div>
