--- a/src/components/main-banner/main-banner.scss
+++ b/src/components/main-banner/main-banner.scss
@@ -58,7 +58,7 @@
   }
   
   &__button {
-    margin-left: -26px;
+    //margin-left: -26px;
     padding: 10px 30px 8px 50px;
 
     @media(max-width: 992px) {
