--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,3 +1,6 @@
+$bullet-width: 15px;
+$bullet-border-width: 1px;
+
 .about {
   padding-top: 47px;
   padding-bottom: 55px;
@@ -8,7 +11,7 @@
     flex-wrap: wrap;
   }
 
-  &-work,
+  &-skills,
   &-me {
     width: 50%;
     padding-top: 25px;
@@ -19,7 +22,7 @@
     }
   }
 
-  &-work {
+  &-skills {
 
     &__list {
       display: flex;
@@ -31,7 +34,84 @@
     }
   }
 
+
+  &-works {
+    display: flex;
+    flex-direction: column;
+
+    &__button {
+      align-self: center;
+      padding: 10px 30px 8px 50px;
+
+      @media(max-width: 992px) {
+        margin-left: 0;
+      }
+
+      &-title {
+        position: relative;
+
+        &:before {
+          position: absolute;
+          content: '';
+          background-image: url(../images/arrow_up.png);
+          background-repeat: no-repeat;
+          width: 13px;
+          height: 19px;
+          left: -34px;
+        }
+      }
+    }
+
+    &__list {
+      position: relative;
+      flex-grow: 1;
+
+      &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: ($bullet-width / 2) + $bullet-border-width;
+        width: 1px;
+        background-color: #121212;
+      }
+    }
+
+    &__item {
+      position: relative;
+      display: flex;
+      flex-wrap: wrap;
+      line-height: 24px;
+      padding-left: 25px;
+
+      &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        border-radius: 50%;
+        width: $bullet-width;
+        height: $bullet-width;
+        top: 0;
+        left: 0;
+        border: 1px solid #121212;
+        background-color: #ffffff;
+      }
+
+      &-label {
+        font-weight: bold;
+      }
+
+      &_button {
+        margin-top:   50%;
+      }
+    }
+  }
 }
+
+.about-works-item-list {
+  width: 100%;
+}
+
 
 .checkbox {
   margin-top: 5px;
@@ -44,7 +124,7 @@
 
     ~ .checkbox__icon {
       position: relative;
-      display: block;
+      display: flex;
       justify-content: center;
       align-items: center;
       width: 15px;
@@ -52,32 +132,29 @@
       border-radius: 50%;
       margin-right: 2px;
       background: #fff;
-      border: 1px solid #d2d2d2;
+      border: 1px solid #121212;
       cursor: pointer;
       transition: 0.2s;
       overflow: hidden;
 
       &:before {
+        display: block;
         content: '';
-        display: none;
+        width: 0;
+        height: 0;
+        border-radius: 50%;
+        background-color: #33b5e5;
+        transition: 0.3s;
       }
 
-      svg{
-        font-size: 15px;
-        transition: 0.2s;
-        color: transparent;
-      }
     }
 
     &:checked ~ .checkbox__icon {
-      position: absolute;
-      width: 11px;
-      height: 11px;
-      background-color: #33b5e5;
-
-      .checkbox__label {
-        padding-left: 9px;
+      &:before {
+        width: 11px;
+        height: 11px;
       }
+
     }
 
   }
